<?xml version="1.0"?>
<package format="3">
  <name>tee4dof_probe</name>
  <version>0.0.2</version>
  <description>4-DOF TEE probe for ROS 2 Humble + Gazebo Classic demo (insertion, rotation, tip pitch, tip yaw)</description>
  <maintainer email="dev@example.com">TEE Demo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
